--- a/public/css/stylelogin.css
+++ b/public/css/stylelogin.css
@@ -21,7 +21,7 @@ body {
     margin: 0 auto 100px;
     text-align: center;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-    padding: 30px;
+    padding: 20px;
     height: 300px;
     border-radius: 20px;
 }
@@ -50,7 +50,7 @@ body {
     font-size: 14px;
 }
 
-.form button {
+.form .login {
     font-family: "Roboto", sans-serif;
     text-transform: uppercase;
     outline: 0;
